--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ wasm-bindgen = "0.2.84"
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 tch = "0.14.0"
+plotters = "0.3.5"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
